# geoclue

./: .gitlab-ci.yml  HACKING.md  NEWS  README.md  configure.ac  meson.build  meson_options.txt
data/: geoclue.5.in  geoclue.conf.in  meson.build
demo/: gclue-service-agent.c  install-file.py  meson.build  where-am-i.c
docs/: Makefile.am  meson.build
docs/lib/: Makefile.am
libgeoclue/: Makefile.am  gclue-simple.c  gclue-simple.h  meson.build
public-api/: meson.build
src/: create-unified-xml.py  gclue-3g-tower.h  gclue-3g.c  gclue-cdma.c  gclue-client-info.c  gclue-config.c  gclue-config.h  gclue-location-source.c  gclue-location.c  gclue-location.h  gclue-locator.c  gclue-main.c  gclue-marshal.list  gclue-min-uint.c  gclue-modem-gps.c  gclue-modem-manager.c  gclue-modem.c  gclue-mozilla.c  gclue-nmea-source.c  gclue-nmea-source.h  gclue-service-client.c  gclue-service-location.c  gclue-service-manager.c  gclue-web-source.c  gclue-wifi.c  meson.build  org.freedesktop.GeoClue2.Manager.xml
src/agent/: meson.build
src/geocode-glib/: meson.build
